# neural-network

./: .coveragerc  .gitignore  README.md  makefile  pyproject.toml
docs/: implementation.md  project-spec.md  testing.md  user-guide.md
docs/weekly-reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: activations.py  mlp.py  mnist_loader.py  nn_utils.py
src/flaskapp/static/: style.css
src/flaskapp/templates/: index.html
src/model/: activations.py  layer.py  loss.py  main.py  mlp.py  mnist_loader.py  nn_utils.py
src/model/tests/: activations_test.py  integration_test.py  test_layer.py  test_loader.py  test_loss_fn.py  test_mlp.py  test_weight_init.py
src/tests/: activations_test.py  nn_utils_test.py  test_loss_fn.py  test_mlp.py  test_nn_utils.py
src/web/: app.py
src/web/parameters/: layer1.npz  layer2.npz  layer3.npz
src/web/static/: pixels.js  style.css
src/web/templates/: index.html
