[project]
name = "neural-network"
version = "0.1.0"
description = ""
authors = [
    {name = "ileskaa"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=2.2.0,<2.3.0)",
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "model", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.9.1"

